map working key obfuscated

--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhaWJ-k2cAfylEuYx4svbGZfa5ABO1h48&libraries=libraries=drawing,visualization,places"></script>
+    <script id="customScript"></script>
   </head>
   <body>
     <script>
