--- a/web/index.html
+++ b/web/index.html
@@ -24,10 +24,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="travel_planner_pro" />
-    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <link rel="apple-touch-icon" href="icons/favicon.ico" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/ico" href="icons/favicon.ico" />
 
     <title>travel_planner_pro</title>
     <link rel="manifest" href="manifest.json" />
