some more fixes

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,17 @@
     <script id="customScript"></script>
   </head>
   <body>
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      "
+    >
+      <img src="./img/loading.gif" alt="Loading" width="300px" height="300px" />
+    </div>
+
     <script>
       window.addEventListener("load", function (ev) {
         // Download main.dart.js
