--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,12 @@
         height: 100vh;
       "
     >
-      <img src="./img/loading.gif" alt="Loading" width="300px" height="300px" />
+      <img
+        src="./img/loading1.gif"
+        alt="Loading"
+        width="500px"
+        height="500px"
+      />
     </div>
 
     <script>
